Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-05-20 (SVN):
    * bgmusic.c: moved the commented out code to bgmusic.old so that the
      file's contents can be followed more easily.

2011-05-20 (SVN):
    * added COM_FileGetExtension to return a file's extension or empty
      string if there is none. renamed the existing COM_FileExtension
      to COM_ExtractExtension and tidied it a bit.

2011-05-19 (SVN):
    * strings.txt: Removed explicit line breaks from the cathedral holy
      pool room message at line 92: they were leading to poor alignment
      and this is in parallel to the cathedral entrance message at line
      137, too.  Patch from Sander van Dijk.

2011-05-19 (SVN):
    * gamecode, triggers.hc (trigger_interval): Reverted nexttink value
      to 0.1 for the hexen2 and the expansion pack versions.  Increased
      it further to 2.0 for hexenworld and siege versions, because 0.3
      was seen to be not enough on two old pentium3-500 and 650 machines.
      Changed documentation because this obviously not a proper fix but
      a work around.  Further work on this may (or may not) follow.

2011-05-17 (SVN):
    * gamecode, triggers.hc (trigger_interval): Fixed issue which used to
      crash HexenWorld server if one attempted to run romeric5 (Temple of
      Mars) map. Fix was effected by slightly relaxing the initialization
      time of the four pendula in the level. Since the fix affects only
      the initialization, change was applied to all triggers.hc versions.
      Documented the issue in the source. Fix by Thomas Freundt.

2011-05-14 (SVN):
    * gamecode, mezzoman.hc: Fixed a HexenC bug which would prevent a
      yakman from appearing during the 'Trial of Strength' in the 'Temple
      of Phurbu' (tibet7) level of the mission pack, rendering the level
      not completable. Fix by Thomas Freundt; quoting his analysis:

      "The problem originates in the Werepanther's shield.  [...]